[package]
name = "hyper-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hyper_token"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
solana-program = "2.0.1"
spl-associated-token-account = "3.0.2"
spl-token-2022 = "3.0.2"
